  * Updated Underscore to v1.3.2
  * Fixed a bug with regex check for valuePattern in M.ListView
  * Improved behaviour and stability of dialogs
  * Adjusted look and feel of date picker to fit into jqm design
  * Adjusted a few ui components to work with jqm 1.1
  * Implemented real fixed toolbars/tab bars of jqm 1.1
  * Adjusted M.SliderView to make use of jqm's 'highlight' option

** Version 1.0 - Date 25.01.2012 **

  * Do not trigger success callback when isUpdate within M.MapView's init()
  * Added icon property to M.MapMarkerView
  * Fixed initialText property of M.TextFieldView with input-type password (thx to amenon)
  * Improved debugging of M.Toolbar, regarding the anchorLocation property of the child views (thx to greylurk)
  * Fixed a bug in local storage provider (thx to amenon)
  * Updated Underscore to v1.3.1
  * Updated D8 library to 0.1.3
  * Fixed a bug with native date picker and M.TextFieldView (update value on lostFocus event)
  * Content binding now can handle 0 as number since we now check for undefined & null
  * M.LocationManager's getAddressByLocation() now can return the address as an components object instead of fixed string
  * Fixed the "overlapping" problem of M.ListView if used in between other views
  * Fixed the problem of too long values in the center position of a toolbar

** Version 1.0 RC1 - Date 17.01.2012 **

  * Fixed a bug with sendNoCacheHeader property of M.Request
  * I18N not sets language to default language if the desired one is not available
  * Fixed a bug in M.Request concerning the internal callbacks
  * Added M.DataConsumer as a special data provider that only works as a source and in combination with the model's find()
  * Fixed a bug with textfields (date input), computed value and the datepicker
  * Updated Underscore to v1.3
  * Updated mobiscroll to 1.5.3
  * Fixed a bug with M.ScrollView and the clear button
  * Added disable()/enable() and clearValue() to M.SearchBarView