@@ -29,6 +29,7 @@
   * Adjusted a few ui components to work with jqm 1.1
   * Implemented real fixed toolbars/tab bars of jqm 1.1
   * Adjusted M.SliderView to make use of jqm's 'highlight' option
+  * Fixed a bug with M.ListView (rendering of sub views is now possible)
 
 ** Version 1.0 - Date 25.01.2012 **
 
